--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/i18n": "^9.5.3",
     "@storyblok/nuxt": "^6.2.4",
     "@tailwindcss/vite": "^4.1.4",
+    "animejs": "^4.0.2",
     "eslint": "^9.25.1",
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.4",
